--- a/usercss.html
+++ b/usercss.html
@@ -27,22 +27,23 @@
         <option id = "pais12">Paraguay</option>
         <option id = "pais13">Venezuela</option>
     </select><br><br>
-    <label for = "nombre">Ingrese su nombre</label><br>
+    <label for = "nombre">Nombre</label><br>
     <input type = "text" id = "nombre" name = "nombre" placeholder="Escriba su nombre"><br><br>
-    <label for = "apellido">Ingrese su apellido</label><br>
+    <label for = "apellido">Apellido</label><br>
     <input type = "text" id = "apellido" name = "apellido" placeholder="Esciba su apellido"><br><br>
-    <label for = "direccion">Ingrese su dirección</label><br>
-    <input type ="text" id = "direccion" name = "direccion" placeholder = "Escriba su direccion completa"><br><br>
-    <laber for = "usuario">Ingrese su nombre de usuario</laber><br>
+    <label for = "direccion">Dirección de residencia</label><br>
+    <input type ="text" id = "direccion" name = "direccion" placeholder = "Ejemplo: Calle 25 #29-11 Bucaramanga Santander"><br><br>
+    <laber for = "usuario">Usuario o Username </laber><br>
     <input type = "text" id = "usuario" name = "usuario" placeholder = "Escriba su usuario"><br><br>
-    <laber for = "password">Ingrese su contraseña</laber><br>
+    <laber for = "password">Contraseña</laber><br>
     <input type = "password" id = "password" name = "password" placeholder = ""><br><br>
-    <laber for = "email">Ingrese su correo electronico</laber><br>
-    <input type = "text" id = "email" name = "email" placeholder = "nombre@gmail.com"><br><br>
-    <laber for = "telefono">Ingrese su telefono</laber><br>
+    <laber for = "email">Dirección de correo electrónico</laber><br>
+    <input type = "text" id = "email" name = "email" placeholder = "nombre@correo.com"><br><br>
+    <laber for = "telefono">Número de teléfono o celular</laber><br>
     <input type = "number" id = "telefono" name = "telefono" placeholder = ""><br><br>
-    </form>
-    <input type = "submit" value = "Registrar">
+    <button type = "submit" name = "Registrar" id = "registrar" class = "btn">Registrar</button>    
+</form>
+    
     
 </body>
 </html>
