--- a/usercss.html
+++ b/usercss.html
@@ -40,6 +40,15 @@
     <laber for = "email">Dirección de correo electrónico</laber><br>
     <input type = "text" id = "email" name = "email" placeholder = "nombre@correo.com"><br><br>
     <laber for = "telefono">Número de teléfono o celular</laber><br>
+    <select name = "codigopais">
+        <option>+57</option>
+        <option>+31</option>
+        <option>+2</option>
+        <option>+58</option>
+        <option>+16</option>
+        <option>+7</option>
+        <option>+37</option>
+    </select>
     <input type = "number" id = "telefono" name = "telefono" placeholder = ""><br><br>
     <button type = "submit" name = "Registrar" id = "registrar" class = "btn">Registrar</button>    
 </form>
