--- a/UserMaterialize.html
+++ b/UserMaterialize.html
@@ -11,9 +11,10 @@
 
 </head>
 <body>
-
-    <h1>REGISTRO DE USUARIOS</h1>
-
+    <div class="card-panel teal lighten-2"> 
+    <div class="container">
+    <h2 class="white-text">REGISTRO DE USUARIO</h2>
+</div>
     <div class="section container">
     <div class="row">
     <form class ="col s12">
@@ -54,6 +55,6 @@
  </form>
 </div>
 </div>
-
+</div>
 </body>
 </html>
