--- a/UserMaterialize.html
+++ b/UserMaterialize.html
@@ -13,8 +13,15 @@
 <body>
     <div class="card-panel teal lighten-2"> 
     <div class="container">
-    <h2 class="white-text">REGISTRO DE USUARIO</h2>
-</div>
+    <div class="row">
+        <div class="col s6">
+            <h2 class="white-text">REGISTRO DE USUARIO</h2>
+        </div>
+        <div class="col s3"> 
+        <img class="responsive-img" src="https://colinstodd.com/images/posts/matcss-min.png" alt="">
+        </div>
+    </div>
+    </div>
     <div class="section container">
     <div class="row">
     <form class ="col s12">
