--- a/UserBootstrap.html
+++ b/UserBootstrap.html
@@ -12,18 +12,21 @@
   </head>
   <body>
     <section class="container">
-    <h3 class="text-uppercase text-center">REGISTRO DE USUARIO</h3>
-     <br></br>
+        <br>
+        <div class="p-3 mb-2 bg-danger text-white">
+        <h3 class="text-uppercase text-center">REGISTRO DE USUARIO</h3>
+        </div>
+     <br>
     <div class="row">
         <div class ="col-6">
             <form action="">
             <div class="form-group">
-            <label for = "nombre">Nombre</label>
-            <input type = "text" placeholder="Escribe tu nombre" class="form-control"> 
+            <label for = "nombre">Nombres</label>
+            <input type = "text" placeholder="Escribe tus nombres" class="form-control"> 
         </div>
         <div class="form-group">
-            <label for = "apellido">Apellido</label> 
-            <input type = "text" placeholder="Escribe tu apellido" class="form-control">   
+            <label for = "apellido">Apellidos</label> 
+            <input type = "text" placeholder="Escribe tus apellidos" class="form-control">   
         </div>
         <div class="form-group">
             <label for = "direccion">Dirección de residencia</label> 
@@ -45,6 +48,27 @@
             <label for = "telefono">Número de teléfono o celular</label> 
             <input type = "number" placeholder="Escribe tu telefono" class="form-control">
         </div>
+         <div> 
+        <form class="form-inline">
+            <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Pais</label>
+            <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref" class="form-control">
+              <option selected>Selecciona...</option>
+              <option value="1">Alemania</option>
+              <option value="2">Canadá</option>
+              <option value="3">Colombia</option>
+              <option value="4">Dinamarca</option>
+              <option value="5">Ecuador</option>
+              <option value="6">Estados Unidos</option>
+              <option value="7">Francia</option>
+              <option value="8">Inglaterra</option>
+              <option value= "9">Italia</option>
+              <option value="10">México</option>
+              <option value="11">Panamá</option>
+              <option value="12">Paraguay</option>
+              <option value="13">Venezuela</option>
+            </select>
+        </div> 
+        <br>
         <div class="form-group">
             <button class="btn btn-danger">Registrar</button>    
         </div>        
@@ -52,7 +76,6 @@
     </div>
 </div>
     </section>
-
-  
   </body>
 </html>
+
