--- a/carrcss.html
+++ b/carrcss.html
@@ -18,39 +18,39 @@
         <label for = "coches">Tipo de coche  </label>  
     <select name = "tipocoche">
         <option selected="true" disabled="disabled">Seleccione el tipo de coche</option>
-        <option id = "tipo1">Sedán</option>
-        <option id = "tipo2">Hatchback</option>
-        <option id = "tipo3">SUV</option>
-        <option id = "tipo4">Deportivo</option>
-        <option id = "tipo5">Comercial</option>
-        <option id = "tipo6">Van</option>
-        <option id = "tipo7">Pick Up</option>
-        <option id = "tipo8">Camion</option>
+        <option id = "1">Sedán</option>
+        <option id = "2">Hatchback</option>
+        <option id = "3">SUV</option>
+        <option id = "4">Deportivo</option>
+        <option id = "5">Comercial</option>
+        <option id = "6">Van</option>
+        <option id = "7">Pick Up</option>
+        <option id = "8">Camion</option>
     </select><br><br>
 
     <label for = "coches">Estado  </label>  
     <select name = "Estadocoche">
         <option selected="true" disabled="disabled">Seleccione el estado del vehiculo</option>
-        <option id = "estado1">1/10 (Malo)</option>
-        <option id = "estado2">2/10</option>
-        <option id = "estado3">3/10</option>
-        <option id = "estado4">4/10</option>
-        <option id = "estado5">5/10(Regular)</option>
-        <option id = "estado6">6/10</option>
-        <option id = "estado7">7/10</option>
-        <option id = "estado8">8/10</option>
-        <option id = "esatdo9">9/10</option>
-        <option id = "estado10">10/10 (Bueno)</option>
+        <option id = "11">1/10 (Malo)</option>
+        <option id = "22">2/10</option>
+        <option id = "33">3/10</option>
+        <option id = "44">4/10</option>
+        <option id = "55">5/10(Regular)</option>
+        <option id = "66">6/10</option>
+        <option id = "77">7/10</option>
+        <option id = "88">8/10</option>
+        <option id = "99">9/10</option>
+        <option id = "101">10/10 (Bueno)</option>
     </select><br><br>
 
     <label for = "coches">Tipo de combustible </label>  
     <select name = "Movidoa">
         <option selected="true" disabled="disabled">Seleccione tipo de combustible</option>
-        <option id = "movido1">Gas</option>
-        <option id = "movido2">Gasolina</option>
-        <option id = "movido3">ACPM</option>
-        <option id = "movido4">Electrico</option>
-        <option id = "movido5">Hibrido (Gasolina-Electrico)</option>
+        <option id = "12">Gas</option>
+        <option id = "23">Gasolina</option>
+        <option id = "34">ACPM</option>
+        <option id = "45">Electrico</option>
+        <option id = "56">Hibrido (Gasolina-Electrico)</option>
     </select><br><br>
 
     <label for = "coches">Marca </label> 
