--- a/carbootstrap.html
+++ b/carbootstrap.html
@@ -16,7 +16,7 @@
     <form id = "form1" nombre = "form1" method="post">
         <header>
             <div>
-            <h1>REGISTRO DE AUTOS</h1>
+            <h1 class = "display-1">REGISTRO DE AUTOS</h1>
             </div><br>
         </header>
 
@@ -236,7 +236,7 @@
             </section>
          </div><br>
 
-         <button type = "submit" id = "registrar" name = "registrar">REGISTRAR</button><br><br>
+         <button type = "button" class = "btn btn-primary">REGISTRAR</button><br><br>
     </form>
 
 
