--- a/CarMaterialize.html
+++ b/CarMaterialize.html
@@ -215,21 +215,26 @@
                         <input type="text" name="caja" id="caja" placeholder="Escriba el número de caja del vehiculo">
                         <label for="caja"> Caja </label>
                     </div>
-                    <div class="input-field col l3 m3">
+                    <div class="input-field col l12 m12">
                         <input type="text" name="motor" id="motor" placeholder="Escriba el número del motor">
                         <label for="motor"> Motor </label>
                     </div>
-                    <div class="input-field col l3 m3">
+                    <div class="input-field col l4 m4">
                         <input type="text" class="datepicker" name="fecha_publicacion" id="fecha_publicacion" placeholder="Seleccione la fecha">
                         <label for="fecha_publicacion">Fecha de publicación</label>
                     </div>
-                    <div class="input-field col l3 m3">
+                    <div class="input-field col l4 m4">
                         <input type="text" name="precio" id="precio" placeholder="Escriba el precio sin . ni ,">
                         <label for="precio"> Precio </label>
                     </div>
-                    <div class="input-field col l3 m3">
-                        <input type="text" name="precio" id="precio" placeholder="Escriba el precio sin . ni ,">
-                        <label for="precio"> Precio </label>
+                    <div class="input-field col l4 m4">
+                        <input type="text" name="moneda" id="moneda" placeholder="Escriba el tipo de modena del precio del vehiculo">
+                        <label for="moneda"> Moneda </label>
+                    </div>
+
+                    <div class="input-field col l4 m4">
+                        <input type="text" name="moneda" id="moneda" placeholder="Escriba el tipo de modena del precio del vehiculo">
+                        <label for="moneda"> Moneda </label>
                     </div>
 
                 
