--- a/CarMaterialize.html
+++ b/CarMaterialize.html
@@ -29,13 +29,13 @@
 <body>
 
 
-    <nav class="white"></nav>
+    <nav class="white pink lighten-2"></nav>
     <br>
-    <div class="section container">
+    <div class="section container ">
         <div class="row">
         <form id = "registro" method = "post">
 
-                <div class= "z-depth-1 section center-align white-text teal lighten-2" >
+                <div class= "z-depth-1 section center-align white-text teal lighten-2">
                         <h3 class="">REGISTRO DE AUTOS</h3>
                 </div><br>
                     <div class="input-field col l6 m6">
@@ -232,20 +232,16 @@
                         <label for="moneda"> Moneda </label>
                     </div>
 
-                    <div class="input-field col l4 m4">
-                        <input type="text" name="moneda" id="moneda" placeholder="Escriba el tipo de modena del precio del vehiculo">
-                        <label for="moneda"> Moneda </label>
+                    <div class="input-field col l12 m12">
+                        <textarea id="descripcion" class="materialize-textarea" data-length="500" placeholder="Haga una breve descripción del vehiculo"></textarea>
+                        <label for="descripcion">Descripción del vehiculo</label>
                     </div>
 
+                    <button class="btn waves-effect teal lighten-2" type="submit" name="action">Registrar
+                        <i class="material-icons right">send</i>
+                    </button>
                 
-
-
-
-    
-
-   
-   
-   
-
+                    </form>
+        </div>
 </body>
 </html>
